--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -6,89 +6,23 @@
    License: none (public domain)
 */
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
+html {
+  min-height: 100vh;
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+main {
+  display: inherit;
+  border-style: none;
+}
+
+* {
   border: 0;
   font: inherit;
   display: block;
@@ -96,9 +30,21 @@ video {
   text-decoration: none;
   box-sizing: border-box;
 }
-
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+  border-spacing: 0;
+  box-sizing: inherit;
+}
 /* HTML5 display-role reset for older browsers */
-
+style,
+title {
+  display: revert;
+}
 blockquote,
 q {
   quotes: none;
@@ -114,31 +60,6 @@ q:after {
 
 table {
   border-collapse: collapse;
-}
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  border: none;
-  outline: none;
-  border-spacing: 0;
-  box-sizing: inherit;
-}
-html {
-  min-height: 100vh;
-  font-size: 62.5%;
-}
-
-body {
-  font-size: 1.6rem;
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-main {
-  display: inherit;
-  border-style: none;
 }
 
 img,
